Flexible LLM parser, OTel validation, input guards, prompt consolidation, code cleanup
Signed-off-by: Amit Galitzky <amgalitz@amazon.com>